# tide

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  build.zig  build.zig.zon  docs.md  go.mod  install.ps1  install.sh  uninstall.ps1
.github/workflows/: test.yml
cmd/: config.go  main.go  print.go  process_manager.go  watcher.go  watcher_test.go
scripts/: install.ps1  install.sh  uninstall.ps1
src/: main.rs  main.zig  print.rs  process_manager.rs  test.rs  toml.zig  watcher.rs  watcher.zig
