[package]
name = "tide"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.22"
colored = "2.0"
tempfile = "3.10"
filetime = "0.2"

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"
